Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@
 %-----------------------
 \hypersetup{ 	
 pdfsubject = {Program Systems Engineering},
-pdftitle = {ItsSoOver},
+pdftitle = {itssoover},
 pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
 }
 
@@ -58,7 +58,7 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
     % Title of the work
     {\Large 2\textsuperscript{nd} Laboratory Work}\par
     \vspace{0.5cm}
-    {\Large \textbf{ItsSoOver}}\par
+    {\Large \textbf{itssoover}}\par
     {\Large \textbf{Iteration, design and implementation}}\par
     
     \vspace{3cm}
@@ -91,7 +91,7 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
 \section{Logical View}
 
 \subsection*{Class Diagram}
-    \includegraphics[width=\textwidth]{Diagrams/class_diagram.png}
+    \includegraphics[width=\textwidth]{out/Diagrams/class_diagram/class_diagram.png}
 
 \subsection*{State Diagram}
 ...State diagram
