Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -65,7 +65,7 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
     {\Large 2\textsuperscript{nd} Laboratory Work}\par
     \vspace{0.5cm}
     {\Large \textbf{itssoover}}\par
-    {\Large \textbf{Iteration, design and implementation}}\par
+    {\Large \textbf{Design and Implementation}}\par
     
     \vspace{3cm}
     
@@ -93,29 +93,37 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
 
 \section{Context}
  Some text and ideas are mentioned...
+ ??????
 
 \section{Logical View}
 
 \subsection*{Class Diagram}
     \includegraphics[width=\textwidth]{out/Diagrams/class_diagram/class_diagram.png}
 
+TODO: ignas
+
 \subsection*{State Diagram}
-...State diagram
+TODO: Mykolas
 
 \section{Development View}
 
 \subsection*{Package Diagram}
+TODO: Augustas
 ...Package diagram
 
 \subsection*{Component Diagram}
+TODO: Augustas
 ...Component diagram
 
 \section{Process View}
 
 \subsection*{Sequence Diagram}
-...Sequence diagram
+TODO: Mykolas
+\subsection*{Activity Diagram}
+TODO: Mykolas
 
 \section{Physical View}
+\subsection{Deployment}
 \begin{figure}[H]
     \centering
     \textwidthdiagram[0.8]{deployment_diagram.tex}
@@ -131,6 +139,9 @@ persisted using an SQLite database. Communication between the client and
 server occurs over HTTPS, ensuring secure data transmission. This design
 enables a lightweight client while leveraging cloud infrastructure for
 back-end processing and storage of user and game data.
+
+\subsection{CI/CD}
+TODO: Mykolas
 
 \section{Use Case View}
 
