--- a/main.tex
+++ b/main.tex
@@ -100,7 +100,11 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
 \subsection*{Class Diagram}
     \includegraphics[width=\textwidth]{out/Diagrams/class_diagram/class_diagram.png}
 
-TODO: ignas
+All frontend pages (AccountPage, StatisticsPage, SettingsPage, MathGamePage, SudokuGamePage, PairMatchingGamePage, AimTrainerPage) inherit from BlazerComponentBase. AccountPage and StatisticsPage provide interfaces for cognitive progress tracking. SettingsPage allows users to modify their privacy settings. The game-specific pages (MathGamePage, SudokuGamePage, PairMatchingGamePage, AimTrainerPage) are each designed for a unique game experience, and every gaming page utilizes a TimerService to consistently manage countdowns.
+
+Services such as MathGameService, SudokuService, AimTrainerService, PairUpService, AccountScoreService, and UserService encapsulate the application's business logic and handle data operations. Repositories like ScoreRepository and UserRepository are responsible for interacting with the database.
+
+Controllers including AccountScoreController, AimTrainerController, MathGameController, PairUpController, SudokuController, and UserController act as intermediaries, exposing API endpoints to connect the front end with the back-end services. Data is consistently exchanged between the front end and back end using Data Transfer Objects (DTOs) such as UserScoreDto<T> and AverageScoreDto. 
 
 \subsection*{State Diagram}
 TODO: Mykolas
