Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -101,9 +101,8 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
 
 \begin{figure}[H]
     \centering
-    \resizebox{0.8\textwidth}{!}
-        \input{class_diagram.latex}
-    \caption{Class diagram}
+    \textwidthdiagram{class_diagram.latex}
+    \caption{Class Diagram}
     \label{fig:class_diagram}
 \end{figure}
 
@@ -139,7 +138,7 @@ TODO: Mykolas
 \begin{figure}[H]
     \centering
     \textwidthdiagram[0.8]{deployment_diagram.tex}
-    \caption{Deployment diagram}
+    \caption{Deployment Diagram}
     \label{fig:deployment_diagram}
 \end{figure}
 
