renamed diagrams, removed component skinparam

--- a/main.tex
+++ b/main.tex
@@ -263,7 +263,7 @@ Figure~\ref{fig:backend_package} delves into the internal structure of the backe
 TODO: Augustas
 \begin{figure}[H]
     \centering
-    \textwidthdiagram{simplified_component_diagram.latex}
+    \textwidthdiagram{components_simplified_diagram.tex}
     \caption{Simplified Component Diagram}
     \label{fig:simp_component_diagram}
 \end{figure}
