added legend to class diagram

--- a/main.tex
+++ b/main.tex
@@ -105,7 +105,7 @@ pdfauthor = {Ignas Časas, Mykolas Marius Budrys, Augustas Kniška}
 \begin{figure}[H]
     \centering
     \begin{adjustbox}{width=0.98\paperwidth,center}
-        \inputdiagram{class_diagram.latex}
+        \inputdiagram{class_diagram.tex}
     \end{adjustbox}
     \caption{Class Diagram}
     \label{fig:class_diagram}
